--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
+html {
+  scrollbar-gutter: stable;
+}
+
+/* Prevent AOS Flash of Unstyled Content (FOUC) */
+[data-aos] {
+  pointer-events: none;
+}
+[data-aos]:not(.aos-init) {
+  opacity: 0 !important;
+  transform: none !important;
+  transition: none !important;
+}
+
+
 :root {
   /* Colors */
   --primary: #0066FF;
@@ -137,6 +152,8 @@ a {
   max-width: 1280px;
   margin: 0 auto;
   width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /* Buttons */
@@ -291,7 +308,7 @@ a {
   width: 100%;
   height: 100%;
   background: var(--white);
-  z-index: 9999;
+  z-index: 100000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -3020,7 +3037,7 @@ select option {
   position: fixed;
   bottom: 25px;
   right: 25px;
-  z-index: 9999;
+  z-index: 998;
   background: var(--primary);
   color: #fff;
   border: none;
